--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,8 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [features]
-default = ["nightly"]
-nightly = []
+default = ["tinyvec"]
+
+[dependencies.tinyvec]
+version = "1.1.0"
+optional = true
