--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,10 +7,11 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [features]
-default = ["alloc", "nightly"]
+default = ["alloc", "nightly", "profile"]
 alloc = []
 nightly = []
+profile = []
 
 [package.metadata.docs.rs]
-features = ["alloc", "nightly"]
+features = ["alloc", "nightly", "profile"]
 rustdoc-args = ["--cfg", "docs_rs"]
