--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,17 +1,24 @@
 [package]
 name = "coca"
-version = "0.1.0"
+version = "0.1.0" # When updating this, remember to update install instructions in README and html_root_url in lib.rs
 authors = ["Tristan Dannenberg <dtristan@hotmail.de>"]
 edition = "2018"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[features]
-default = ["alloc", "nightly", "profile"]
-alloc = []
-nightly = []
-profile = []
+license = "Zlib OR Apache-2.0"
+description = "Data structures with constant capacity"
+keywords = ["no_std", "allocator", "vec"]
+categories = ["no-std", "data-structures", "memory-management"]
+repository = "https://github.com/teryror/coca"
+readme = "README.md"
 
 [package.metadata.docs.rs]
 features = ["alloc", "nightly", "profile"]
 rustdoc-args = ["--cfg", "docs_rs"]
+
+[profile.test]
+opt-level = 3
+
+[features]
+default = []
+alloc = []
+nightly = []
+profile = []
