--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,3 +25,4 @@ profile = []
 
 [dev-dependencies]
 rand = { version = "0.8", features = ["small_rng"] }
+rustc-hash = { version = "1.1", default-features = false }
